--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body {
     list-style: none;
 }
 
-.site-nav a {
+.site-nav .link {
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -51,7 +51,7 @@ body {
 }
 
 
-.contacts a {
+.contacts .contact {
     color: var(--text-color);
     font-weight: 500;
     font-size: 14px;
@@ -60,8 +60,8 @@ body {
     text-decoration: none;
 
 }
-.contacts a:hover,
-.contacts a:focus {
+.contacts .contact:hover,
+.contacts .contact:focus {
     color: var(--accent-color);
 }
 
@@ -86,11 +86,8 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
-.section p {
+.section .text {
     color: var(--text-color);
-}
-
-.feature p {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
@@ -104,7 +101,7 @@ body {
     letter-spacing: 0.03em;
 }
 
-.work h3 {
+.name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -112,7 +109,8 @@ body {
     letter-spacing: 0.03em;
 }
 
-.work p {
+.direction{
+    color: var(--text-color);
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
@@ -126,7 +124,8 @@ body {
     letter-spacing: 0.06em;
 }
 
-.projects .desc{
+.desc{
+color: var(--text-color);
 font-size: 16px;
 line-height: 30px;
 letter-spacing: 0.03em;
@@ -164,14 +163,14 @@ letter-spacing: 0.03em;
 }
 
 /*FOOTER */
-.address a {
+.contact-info{
     color:  rgba(255, 255, 255, 0.6);
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     text-decoration: none;
 }
-.address .map {
+.map {
     color: var(--hero-color);
     font-size: 14px;
     line-height: 1.7;
