--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body {
     letter-spacing: 0.03em;
 }
 
-.name {
+.work .name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -109,7 +109,7 @@ body {
     letter-spacing: 0.03em;
 }
 
-.direction{
+.work .direction{
     color: var(--text-color);
     font-size: 16px;
     line-height: 1.18;
@@ -124,7 +124,7 @@ body {
     letter-spacing: 0.06em;
 }
 
-.desc{
+.projects .desc{
 color: var(--text-color);
 font-size: 16px;
 line-height: 30px;
@@ -163,14 +163,14 @@ letter-spacing: 0.03em;
 }
 
 /*FOOTER */
-.contact-info{
+.address .contact-info{
     color:  rgba(255, 255, 255, 0.6);
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     text-decoration: none;
 }
-.map {
+.address .map {
     color: var(--hero-color);
     font-size: 14px;
     line-height: 1.7;
