--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ body {
 .projects .desc{
 color: var(--text-color);
 font-size: 16px;
-line-height: 30px;
+line-height: 1.9;
 letter-spacing: 0.03em;
 }
 /*BUTTON*/
@@ -135,6 +135,7 @@ letter-spacing: 0.03em;
 .hero-button {
     color: var(--hero-color);
     background-color: var(--accent-color);
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
@@ -148,6 +149,7 @@ letter-spacing: 0.03em;
 .button {
     color: var(--primary-text-color);
     background-color: #F5F4FA;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
@@ -164,6 +166,7 @@ letter-spacing: 0.03em;
 
 /*FOOTER */
 .address .contact-info{
+    font-style: normal;
     color:  rgba(255, 255, 255, 0.6);
     font-size: 14px;
     line-height: 1.7;
@@ -171,6 +174,7 @@ letter-spacing: 0.03em;
     text-decoration: none;
 }
 .address .map {
+    font-style: normal;
     color: var(--hero-color);
     font-size: 14px;
     line-height: 1.7;
