--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,9 @@ img {
 }
 
 /* HEADER */
+header {
+  border: 1px solid #ececec;
+}
 .header-container {
   display: flex;
   align-items: center;
@@ -64,6 +67,7 @@ img {
   gap: 50px;
   align-items: center;
 }
+
 .site-nav .header-link {
   display: block;
   padding-top: 52px;
@@ -212,14 +216,50 @@ img {
   letter-spacing: 0.03em;
 }
 
-.projects .title {
+.button-list {
+  display: flex;
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  gap: 8px;
+}
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.projects-item {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.projects-item:nth-child(3n) {
+  margin-right: 0;
+}
+.projects-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.project-img {
+  margin-bottom: 20px;
+}
+.projects-list .title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
-.projects .desc {
+.projects-list .desc {
   color: var(--text-color);
   font-size: 16px;
   line-height: 1.9;
@@ -262,6 +302,12 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-bottom: 50px;
+  padding: 6px 22px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button:hover,
