--- a/css/styles.css
+++ b/css/styles.css
@@ -197,9 +197,6 @@ header {
   margin-left: auto;
   margin-right: auto;
 }
-.team-list .image {
-  margin-bottom: 30px;
-}
 
 .team-list .name {
   font-weight: 500;
@@ -224,7 +221,7 @@ header {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.hidden-title {
+/*.hidden-title {
   color: var(--hero-color);
   font-weight: 900;
   font-size: 44px;
@@ -234,6 +231,21 @@ header {
   text-transform: uppercase;
   visibility: hidden;
 }
+*/
+
+.hidden-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .button-list {
   display: flex;
   justify-content: center;
@@ -241,7 +253,7 @@ header {
   margin-bottom: 50px;
 }
 .project {
-  padding: 20px, 24px;
+  padding: 20px 24px;
 }
 .projects-list {
   display: flex;
