--- a/css/styles.css
+++ b/css/styles.css
@@ -128,9 +128,22 @@ header {
 }
 
 /* HERO */
+
 .section-hero {
   padding-top: 200px;
   padding-bottom: 200px;
+  background-color: #c4c4c4;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 1600px;
+  height: 600px;
+  margin: 0 auto;
 }
 .hero-title {
   color: var(--hero-color);
