--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,29 @@ header {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
+}
+
+/*PSEUDO ELEMENT.CURRENT */
+.header-link::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  opacity: 0;
+}
+
+.header-link:current::after {
+  opacity: 1;
+}
+
+:current::after {
+  color: #2196f3;
 }
 .contacts {
   display: flex;
@@ -111,6 +134,7 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -128,6 +152,7 @@ header {
   letter-spacing: 0.02em;
   text-decoration: none;
   gap: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact:hover,
 .contact:focus {
@@ -223,6 +248,28 @@ header {
   margin-right: auto;
 }
 
+/*WORK LIST OVERLAY */
+.work-item {
+  position: relative;
+}
+.work-overlay {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+  left: 0;
+}
+.div-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-top: 27px;
+}
 .team-list {
   display: flex;
   gap: 30px;
@@ -287,6 +334,7 @@ header {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover,
 .social-link:focus {
@@ -333,6 +381,7 @@ header {
   border: 1px solid #eeeeee;
   margin-right: 30px;
   margin-bottom: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects-item:nth-child(3n) {
   margin-right: 0;
@@ -387,6 +436,7 @@ header {
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -408,6 +458,9 @@ header {
   padding: 6px 22px;
   margin-left: auto;
   margin-right: auto;
+  transition: color cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -434,6 +487,7 @@ header {
   border-radius: 4px;
   justify-content: center;
   align-items: center;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .partners-link:hover,
 .partners-link:focus {
@@ -517,6 +571,7 @@ header {
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
