--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ header {
 }
 
 /*PSEUDO ELEMENT.CURRENT */
-.header-link.current::after {
+.current::after {
   position: absolute;
   content: "";
   display: block;
@@ -84,13 +84,6 @@ header {
   height: 4px;
   border-radius: 2px;
   background-color: var(--accent-color);
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current:hover::after {
-  display: block;
-  opacity: 1;
 }
 
 .contacts {
@@ -257,16 +250,17 @@ header {
   background-color: rgba(47, 48, 58, 0.8);
   bottom: 0;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .div-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  padding-top: 27px;
 }
 .team-list {
   display: flex;
@@ -459,6 +453,7 @@ header {
   letter-spacing: 0.06em;
   cursor: pointer;
   border-radius: 4px;
+  border: solid 0px var(--hero-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 10px 32px;
   margin-left: auto;
@@ -482,6 +477,7 @@ header {
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: solid 0px var(--hero-color);
   padding: 6px 22px;
   margin-left: auto;
   margin-right: auto;
@@ -614,7 +610,8 @@ header {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -625,6 +622,7 @@ header {
   opacity: 0;
   transform: translate(-50%, -50%);
 }
+
 .modal {
   position: absolute;
   top: 50%;
@@ -657,6 +655,7 @@ header {
   border-radius: 50%;
   cursor: pointer;
 }
+
 .modal-icon {
   fill: #000000;
 }
