--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,6 @@ header {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: solid 0px var(--hero-color);
   padding: 6px 22px;
@@ -500,6 +499,7 @@ header {
 }
 .partners-icon {
   fill: rgba(175, 177, 184, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .partners-link {
