--- a/css/styles.css
+++ b/css/styles.css
@@ -602,6 +602,38 @@ header {
   background-color: var(--accent-color);
 }
 
+/*                        FOOTER FORM      */
+
+.form-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-color);
+  margin-bottom: 20px;
+  margin-left: 93px;
+  padding-top: 12px;
+}
+.mail-input {
+  margin-left: 93px;
+  margin-right: 12px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: #2f303a;
+}
+.sub-btn {
+  min-width: 200px;
+  min-height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  text-align: center;
+}
+
 /*MODAL WINDOW*/
 .backdrop {
   position: fixed;
