--- a/css/styles.css
+++ b/css/styles.css
@@ -624,14 +624,40 @@ header {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
+  padding: 15px 16px;
 }
+
 .sub-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-width: 200px;
   min-height: 50px;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background: var(--accent-color);
   border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  display: flex;
+  gap: 10px;
+  align-items: center;
   text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--hero-color);
+  border: solid 0px var(--hero-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sub-btn {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.footer-form {
+  display: flex;
 }
 
 /*MODAL WINDOW*/
