--- a/css/styles.css
+++ b/css/styles.css
@@ -716,4 +716,21 @@ header {
 
 .modal-icon {
   fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon:hover {
+  fill: var(--accent-color);
+}
+
+/*            MODAL FORM            */
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
