--- a/css/styles.css
+++ b/css/styles.css
@@ -735,3 +735,63 @@ header {
   padding-right: 40px;
   margin-bottom: 30px;
 }
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 1);
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.form-label {
+  margin-bottom: 10px;
+  align-items: center;
+}
+.form-group {
+  position: relative;
+  height: 40px;
+}
+.form-input {
+  width: 100%;
+  padding: 12px 42px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 16px;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  outline: 1px solid rgba(33, 150, 243, 1);
+}
+
+.form-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus + .form-icon {
+  fill: rgba(33, 150, 243, 1);
+}
+.textarea-label {
+  margin-bottom: 20px;
+}
+.form-textarea {
+  resize: none;
+  width: 100%;
+  height: 100%;
+  padding: 10px 14px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline-offset: -1px;
+  font-size: 14px;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-textarea:focus {
+  outline: 1px solid rgba(33, 150, 243, 1);
+}
