--- a/css/styles.css
+++ b/css/styles.css
@@ -640,10 +640,7 @@ header {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
-  display: flex;
   gap: 10px;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--hero-color);
   border: solid 0px var(--hero-color);
@@ -652,7 +649,8 @@ header {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.sub-btn {
+.sub-btn:focus,
+.sub-btn:hover {
   background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -733,7 +731,7 @@ header {
   padding-top: 40px;
   padding-left: 40px;
   padding-right: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 12px;
 }
 
 .modal-form {
@@ -794,4 +792,86 @@ header {
 }
 .form-textarea:focus {
   outline: 1px solid rgba(33, 150, 243, 1);
+}
+
+.form-checkbox {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 24px;
+  padding-left: 10px;
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.checkbox-icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(8px) translateY(4px);
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-check:checked ~ .checkbox-icon {
+  background-color: transparent;
+  background-color: rgba(33, 150, 243, 1);
+  background-image: url(../images/icon-check.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+  border: transparent;
+}
+.form-checkbox .form-link {
+  color: var(--accent-color);
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+.input-check {
+  opacity: 0;
+  position: absolute;
+  transform: translateY(10px);
+  z-index: 10;
+}
+.check-label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(30px);
+}
+
+.modal-form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: var(--accent-color);
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  color: var(--hero-color);
+  border: solid 0px var(--hero-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn:focus,
+.modal-form-btn:hover {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
