--- a/css/styles.css
+++ b/css/styles.css
@@ -625,6 +625,14 @@ header {
   border-radius: 4px;
   background-color: #2f303a;
   padding: 15px 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    filter 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mail-input:focus {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: #2f303a;
 }
 
 .sub-btn {
@@ -751,7 +759,6 @@ header {
 }
 .form-group {
   position: relative;
-  height: 40px;
 }
 .form-input {
   width: 100%;
@@ -781,8 +788,8 @@ header {
 }
 .form-textarea {
   resize: none;
-  width: 100%;
-  height: 100%;
+  width: 448px;
+  height: 120px;
   padding: 10px 14px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
