--- a/css/styles.css
+++ b/css/styles.css
@@ -625,6 +625,7 @@ header {
   border-radius: 4px;
   background-color: #2f303a;
   padding: 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     filter 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -714,18 +715,16 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--hero-color);
+  background-color: var(--hero-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
-}
-
-.modal-icon {
-  fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-icon:hover {
-  fill: var(--accent-color);
+
+.modal-btn:hover,
+.modal-form-btn:focus {
+  fill: #188ce8;
 }
 
 /*            MODAL FORM            */
@@ -745,9 +744,7 @@ header {
 .modal-form {
   display: flex;
   flex-direction: column;
-  font-weight: 400;
   font-size: 12px;
-  line-height: 1.67;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 1);
   padding-left: 40px;
@@ -756,9 +753,11 @@ header {
 .form-label {
   margin-bottom: 10px;
   align-items: center;
+  line-height: 1.16;
 }
 .form-group {
   position: relative;
+  margin-top: 4px;
 }
 .form-input {
   width: 100%;
@@ -785,6 +784,7 @@ header {
 }
 .textarea-label {
   margin-bottom: 20px;
+  line-height: 1.16;
 }
 .form-textarea {
   resize: none;
