--- a/css/styles.css
+++ b/css/styles.css
@@ -364,109 +364,26 @@ img {
 .team-section__icon {
   fill: rgba(175, 177, 184, 1);
 }
-
-.hidden-title {
+/*                    PORTFOLIO       */
+.projects-section__hidden-title {
   position: absolute;
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.button-list {
+.projects-section__button-list {
   display: flex;
   justify-content: center;
   gap: 8px;
   margin-bottom: 50px;
 }
-.project {
-  padding: 20px 24px;
-}
-.projects-list {
-  display: flex;
-  flex-wrap: wrap;
-  width: 1230px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.projects-item {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.projects-item:nth-child(3n) {
-  margin-right: 0;
-}
-.projects-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.project-img {
-  margin-bottom: 20px;
-}
-.projects-list .title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-}
-
-.projects-list .desc {
-  color: var(--text-color);
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-}
-.project-link {
-  display: block;
-}
-
-.projects-item:hover,
-.projects-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-/*PORTFOLIO OVERLAY */
-
-.project-thumb {
-  position: relative;
-  width: 370px;
-  height: 294px;
-  overflow: hidden;
-}
-.project-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  padding: 63px 24px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.projects-item:hover .project-overlay {
-  transform: translateY(0%);
-}
-.overlay-text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  color: var(--hero-color);
-}
-/*BUTTON*/
-
-.button {
+.projects-section__button {
   color: var(--primary-text-color);
   background-color: #f5f4fa;
   font-family: inherit;
@@ -485,14 +402,90 @@ img {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button:hover,
-.button:focus {
+.projects-section__button:hover,
+.projects-section__button:focus {
   color: var(--hero-color);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+.projects-section__div {
+  padding: 20px 24px;
+}
+.projects-section__list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.projects-section__item {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.projects-section__item:nth-child(3n) {
+  margin-right: 0;
+}
+.projects-section__item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.projects-section__img {
+  margin-bottom: 20px;
+}
+.projects-section__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+.projects-section__desc {
+  color: var(--text-color);
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+}
+.projects-section__link {
+  display: block;
+}
+.projects-section__item:hover,
+.projects-section__item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+/*PORTFOLIO OVERLAY */
 
+.projects-section__thumb {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  overflow: hidden;
+}
+.projects-section__overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.projects-section__item:hover .projects-section__overlay {
+  transform: translateY(0%);
+}
+.projects-section__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: var(--hero-color);
+}
 /*                    PARTNERS-section        */
 .partners-section__title {
   font-weight: 700;
@@ -691,7 +684,6 @@ img {
   opacity: 0;
   transform: translate(-50%, -50%);
 }
-
 .modal {
   position: absolute;
   top: 50%;
@@ -708,7 +700,6 @@ img {
 }
 .modal__btn {
   position: absolute;
-
   width: 30px;
   height: 30px;
   padding: 0;
@@ -725,7 +716,6 @@ img {
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal__btn:hover,
 .modal__form-btn:focus {
   fill: #188ce8;
@@ -773,7 +763,6 @@ img {
 .form__input:focus {
   outline: 1px solid rgba(33, 150, 243, 1);
 }
-
 .form__icon {
   position: absolute;
   left: 12px;
@@ -802,7 +791,6 @@ img {
 .form__textarea:focus {
   outline: 1px solid rgba(33, 150, 243, 1);
 }
-
 .form__checkbox {
   position: relative;
   align-items: center;
@@ -857,7 +845,6 @@ img {
   top: 0;
   transform: translateX(30px);
 }
-
 .form__modal-form-btn {
   display: flex;
   justify-content: center;
@@ -878,7 +865,6 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form__modal-form-btn:focus,
 .form__modal-form-btn:hover {
   background-color: #188ce8;
